test of username

--- a/README
+++ b/README
@@ -21,7 +21,7 @@ Patches
 Please submit any patches against the ../sources/meta-snapper layer to the xxxx mailing list (xxxx@zzzz.org)
 and cc: the maintainer:
 
-Maintainer: XXX YYYYYY <xxx.yyyyyy@zzzzz.com>
+Maintainer: Ardazishvili Roman <ardazishvili.roman@yandex.ru>
 
 Table of Contents
 =================
